--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "gatsby": "^4.0.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-source-datocms": "^3.0.10",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
