--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "postcss": "^8.3.6",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
     "react-dom": "^17.0.2",
