--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
+    "disqus-react": "^1.1.2",
     "dotenv": "^10.0.0",
     "gatsby": "^4.0.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
@@ -35,6 +37,7 @@
     "react-datocms": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^7.1.0",
     "tailwindcss": "^2.0.3"
   },
   "resolutions": {
