--- a/package.json
+++ b/package.json
@@ -9,36 +9,39 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "start": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@heroicons/react": "^1.0.5",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
     "disqus-react": "^1.1.2",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.3.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-postcss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-source-datocms": "^3.0.10",
-    "gatsby-source-filesystem": "^4.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
-    "postcss": "^8.3.6",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-postcss": "^5.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-source-datocms": "^3.0.11",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
+    "postcss": "^8.4.4",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^7.1.0",
-    "tailwindcss": "^2.0.3"
+    "react-markdown": "^7.1.1",
+    "tailwindcss": "^3.0.1"
   },
   "resolutions": {
     "trim": "0.0.3",
